# timber

./: .env.example  .gitignore  README.md  SPEC.md  TEST_PLAN.md  package-lock.json  package.json  playwright.config.js
.github/workflows/: tauri-release.yml
fixtures/: products_full.json  station_products.json
fixtures/product_details/: pid-desktop.json
public/: mock-data.json
src/: index.html  index.min.css  main.js  model.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: model.test.js  ui.spec.js
